--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.21"
   },
   "devDependencies": {
+    "@storybook/addon-links": "^4.1.4",
     "@storybook/vue": "^4.1.4",
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
