--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@storybook/addon-links": "^4.1.4",
+    "@storybook/addon-options": "^4.1.4",
     "@storybook/addon-storysource": "^4.1.4",
     "@storybook/addon-viewport": "^4.1.4",
     "@storybook/vue": "^4.1.4",
