--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "storybook:build": "build-storybook -c .storybook -o .out"
   },
   "dependencies": {
-    "vue": "^2.5.21"
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.4",
     "@storybook/addon-knobs": "^4.1.4",
     "@storybook/addon-links": "^4.1.4",
     "@storybook/addon-options": "^4.1.4",
@@ -50,6 +52,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "storybook-vue-router": "^1.0.2",
     "vue-template-compiler": "^2.5.21"
   }
 }
