--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "storybook:build": "build-storybook -c .storybook -o .out"
+    "storybook": "start-storybook -p 9001 -c .storybook -s public",
+    "storybook:build": "build-storybook -c .storybook -o .out  -s public"
   },
   "dependencies": {
     "vue": "^2.5.21",
