--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@storybook/addon-storysource": "^4.1.4",
     "@storybook/addon-viewport": "^4.1.4",
     "@storybook/vue": "^4.1.4",
+    "@vue/babel-plugin-transform-vue-jsx": "^1.0.0-beta.2",
+    "@vue/babel-preset-jsx": "^1.0.0-beta.2",
+    "@vue/babel-sugar-functional-vue": "^1.0.0-beta.2",
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-plugin-unit-jest": "^3.0.1",
