--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "sass-loader": "^7.0.1",
     "storybook-vue-router": "^1.0.2",
     "vue-template-compiler": "^2.5.21"
+  },
+  "resolutions": {
+    "kind-of": "^6.0.3"
   }
 }
